Update file formatting and fix bug in function

--- a/notebooks/Preprocessing/patching.ipynb
+++ b/notebooks/Preprocessing/patching.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,19 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_DIR = dotenv.get_key(dotenv.find_dotenv(), \"DATA_DIR\")\n",
     "TARGET_DIR = dotenv.get_key(dotenv.find_dotenv(), \"TARGET_DIR\")\n",
-    "FOLDERS = ['0_N', '1_PB', '2_UDH', '3_FEA', '4_ADH', '5_DCIS', '6_IC']\n",
-    "SPLITS = ['train', 'val', 'test']"
+    "FOLDERS = ['0_N']\n",
+    "SPLITS = ['val']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +159,69 @@
    ],
    "source": [
     "plot_patches(patches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_image_into_patches(folder_path, target_folder_path, patch_size=224):\n",
+    "    \"\"\"\n",
+    "    Split images in a folder into patches of a specified size.\n",
+    "    \n",
+    "    Args:\n",
+    "        folder_path (str): Path to the folder containing images.\n",
+    "        target_folder_path (str): Path to the folder where the patches will be saved.\n",
+    "        patch_size (int, optional): Size of the patches in pixels. Default is 224.\n",
+    "    \"\"\"\n",
+    "    os.makedirs(target_folder_path, exist_ok=True)\n",
+    "    \n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        image_path = os.path.join(folder_path, filename)\n",
+    "        img = Image.open(image_path)\n",
+    "        \n",
+    "        width, height = img.size\n",
+    "        \n",
+    "        # Calculate the number of patches in each dimension\n",
+    "        num_patches_w = width // patch_size\n",
+    "        num_patches_h = height // patch_size\n",
+    "        \n",
+    "        # Split the image into patches\n",
+    "        for i in range(num_patches_h):\n",
+    "            for j in range(num_patches_w):\n",
+    "                left = j * patch_size\n",
+    "                top = i * patch_size\n",
+    "                right = left + patch_size\n",
+    "                bottom = top + patch_size\n",
+    "                \n",
+    "                patch = img.crop((left, top, right, bottom))\n",
+    "                patch_filename = f\"{os.path.splitext(filename)[0]}_{i}_{j}.png\"\n",
+    "                patch_path = os.path.join(target_folder_path, patch_filename)\n",
+    "                patch.save(patch_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing val 0_N\n"
+     ]
+    }
+   ],
+   "source": [
+    "for split in SPLITS:\n",
+    "    for folder in FOLDERS:\n",
+    "        print(f\"Processing {split} {folder}\")\n",
+    "        folder_path = f\"{DATA_DIR}/{split}/{folder}\"\n",
+    "        target_folder_path = f\"{TARGET_DIR}/{split}/{folder}\"\n",
+    "        split_image_into_patches(folder_path, target_folder_path)"
    ]
   },
   {
