--- a/notebooks/EDA/EDA Checklist.ipynb
+++ b/notebooks/EDA/EDA Checklist.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "5386a387-a93a-4f5f-9326-b5e6837c39f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abdelnour/anaconda3/envs/ml/lib/python3.11/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/home/abdelnour/anaconda3/envs/ml/lib/python3.11/site-packages/torchvision/image.so: undefined symbol: _ZNK3c107SymBool10guard_boolEPKcl'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
+      "  warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c3c0855b-76dc-43fe-ab4a-c4dfd2aba125",
    "metadata": {},
    "outputs": [],
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f57d3e99-eafc-4bd5-85d8-bcf0dc064ac7",
    "metadata": {},
    "outputs": [
@@ -49,9 +58,9 @@
     }
    ],
    "source": [
-    "ROI_LATEST = dotenv.get_key(dotenv.find_dotenv(), \"ROI_LATEST\")\n",
-    "DATA_DIR = dotenv.get_key(dotenv.find_dotenv(), \"DATA_DIR\")\n",
-    "ROI_DATA_DIR = dotenv.get_key(dotenv.find_dotenv(), \"ROI_DATA_DIR\")\n",
+    "ROI_LATEST = dotenv.get_key(dotenv.find_dotenv(), \"DATA_DIR\")\n",
+    "DATA_DIR = \"/home/abdelnour/Documents/4eme_anne/S2/projet/data\"\n",
+    "ROI_DATA_DIR = \"/home/abdelnour/Documents/4eme_anne/S2/projet/data/roi-dataset\"\n",
     "\n",
     "print(ROI_LATEST)\n",
     "print(DATA_DIR)\n",
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "991b3f22",
    "metadata": {},
    "outputs": [
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cbde295a-b133-4645-a011-e1d091601f9c",
    "metadata": {},
    "outputs": [],
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "45e43ec9-e4ff-4774-8e39-328526a399b5",
    "metadata": {},
    "outputs": [],
@@ -131,12 +140,15 @@
     "    df = build_df(ROI_LATEST)\n",
     "    df.to_csv(DESCRIPTION_DF_PATH,index=False)\n",
     "else:\n",
-    "    df = pd.read_csv(DESCRIPTION_DF_PATH)"
+    "    df = pd.read_csv(DESCRIPTION_DF_PATH)\n",
+    "    df[\"resolution\"] = df[\"resolution\"].apply(\n",
+    "        lambda x : (int(x[1:-1].split(',')[0]),int(x[1:-1].split(',')[1]))\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "eeb6c762-e55c-4940-8add-ecbce9d33632",
    "metadata": {},
    "outputs": [
@@ -241,13 +253,37 @@
        "4  (1169, 781)   1169     781  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0f655520",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.6993350982666"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"resolution\"] \\\n",
+    "    .apply(lambda x : ImageResizer.get_new_dimensions(x[0], x[1])) \\\n",
+    "    .apply(lambda x : x[0] * x[1] * 3) \\\n",
+    "    .sum() / (1024 * 1024 * 1024)"
    ]
   },
   {
