fix training code

--- a/notebooks/Preprocessing/patching.ipynb
+++ b/notebooks/Preprocessing/patching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -409,6 +409,107 @@
    "outputs": [],
    "source": [
     "df.to_csv('patches.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../../data/patches.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No corresponding row found for: trash/0_N/BRACS_280_N_1.png\n",
+      "No corresponding row found for: trash/0_N/BRACS_280_N_2.png\n",
+      "No corresponding row found for: trash/0_N/BRACS_280_N_3.png\n",
+      "No corresponding row found for: trash/0_N/BRACS_280_N_4.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check if all images were patched and print the images that weren't patched\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Get a list of all image file paths in the dataset folder\n",
+    "image_paths = [str(p) for p in Path(DATA_DIR).rglob('*') if p.is_file()]\n",
+    "\n",
+    "# Iterate over each image path\n",
+    "for image_path in image_paths:\n",
+    "    # Check if the image path exists in the 'original image path' column\n",
+    "    image_path = image_path.replace('D:\\\\AIDS\\\\S2\\\\Project\\\\Dataset\\BRACS_RoI\\\\latest_version\\\\', '')\n",
+    "    image_path = image_path.replace('\\\\', '/')\n",
+    "    if len(df[df['original image path'] == str(image_path)]) == 0:\n",
+    "        # If not, print the image path\n",
+    "        print(f\"No corresponding row found for: {image_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total size of D:\\AIDS\\S2\\Project\\Dataset\\BRACS_RoI\\latest_version is 51.79 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_size = 0\n",
+    "\n",
+    "# Iterate over all files and subdirectories in DATA_DIR\n",
+    "for dirpath, dirnames, filenames in os.walk(DATA_DIR):\n",
+    "    for f in filenames:\n",
+    "        fp = os.path.join(dirpath, f)\n",
+    "        # Skip if it is a symbolic link\n",
+    "        if not os.path.islink(fp):\n",
+    "            total_size += os.path.getsize(fp)\n",
+    "\n",
+    "# Convert total_size from bytes to gigabytes\n",
+    "total_size_gb = round(total_size / (1024 ** 3), 2)\n",
+    "\n",
+    "print(f\"Total size of {DATA_DIR} is {total_size_gb} GB\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total size of D:\\AIDS\\S2\\Project\\Dataset\\Patched is 34.16 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_size = 0\n",
+    "\n",
+    "for dirpath, dirnames, filenames in os.walk(TARGET_DIR):\n",
+    "    for f in filenames:\n",
+    "        fp = os.path.join(dirpath, f)\n",
+    "        if not os.path.islink(fp):\n",
+    "            total_size += os.path.getsize(fp)\n",
+    "\n",
+    "            \n",
+    "total_size_gb = round(total_size / (1024 ** 3), 2)\n",
+    "\n",
+    "print(f\"Total size of {TARGET_DIR} is {total_size_gb} GB\")"
    ]
   },
   {
