fixing resnet18 & resnet34

--- a/notebooks/evaluation/resnet18.ipynb
+++ b/notebooks/evaluation/resnet18.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ResNet34(n_classes=3,layers_to_freeze=4)"
+    "model = ResNet34(n_classes=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
