--- a/notebooks/evaluation/resnet18.ipynb
+++ b/notebooks/evaluation/resnet18.ipynb
@@ -1208,7 +1208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1223,9 +1223,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
