--- a/notebooks/demonstraction/patches_loading.ipynb
+++ b/notebooks/demonstraction/patches_loading.ipynb
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- If you open the original WSI with QuPath you will notice that the generated image is matches the WSI."
+    "- If you open the original WSI with QuPath you will notice that the generated image matches the WSI."
    ]
   }
  ],
