adding hyperparameters to the headers of evaluation notebooks

--- a/notebooks/evaluation/resnet18.ipynb
+++ b/notebooks/evaluation/resnet18.ipynb
@@ -46,6 +46,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Model Hyperparameters :**\n",
+    "\n",
+    "- Initial weights : Image Net.\n",
+    "- batch size : 256\n",
+    "- epochs : 20\n",
+    "- learning rate : 0.001\n",
+    "- sampler : random\n",
+    "- decay rate : no learning rate decay\n",
+    "- dropout : no dropout\n",
+    "- optimizer : adam\n",
+    "- weight decay : no weight decay\n",
+    "- Depth (number of convolutional blocks to fine tune) : 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Setup the code to be device agnostic"
    ]
   },
