--- a/notebooks/evaluation/resnet34_kather100k.ipynb
+++ b/notebooks/evaluation/resnet34_kather100k.ipynb
@@ -46,6 +46,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Model Hyperparameters :**\n",
+    "\n",
+    "- Initial weights : resnet34 weights trained on kather100k dataset, model path : https://huggingface.co/1aurent/resnet34.tiatoolbox-kather100k.\n",
+    "- batch size : 64\n",
+    "- epochs : 10\n",
+    "- learning rate : 0.0001 (0-5), 0.0005 (5-10)\n",
+    "- sampler : balanced\n",
+    "- decay rate : no learning rate decay\n",
+    "- dropout : no dropout\n",
+    "- optimizer : adam\n",
+    "- weight decay : 0.1 (0-5), 0.001 (5-10)\n",
+    "- Depth (number of convolutional blocks to fine tune) : 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Setup the code to be device agnostic"
    ]
   },
