--- a/notebooks/evaluation/resnet34_sgd_weight_decay.ipynb
+++ b/notebooks/evaluation/resnet34_sgd_weight_decay.ipynb
@@ -46,6 +46,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Model Hyperparameters :**\n",
+    "\n",
+    "- Initial weights : Image Net.\n",
+    "- batch size : 64\n",
+    "- epochs : 10\n",
+    "- learning rate : 0.001\n",
+    "- sampler : balanced\n",
+    "- decay rate : no learning rate decay\n",
+    "- dropout : no dropout\n",
+    "- optimizer : sgd\n",
+    "- weight decay : 0.1\n",
+    "- Depth (number of convolutional blocks to fine tune) : 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Setup the code to be device agnostic"
    ]
   },
